@@ -1,29 +1,27 @@
-/*--------------------------------*- Java -*---------------------------------*\
- |		 o                                                                   |                                                                                     
- |    o     o       | HelyxOS: The Open Source GUI for OpenFOAM              |
- |   o   O   o      | Copyright (C) 2012-2016 ENGYS                          |
- |    o     o       | http://www.engys.com                                   |
- |       o          |                                                        |
- |---------------------------------------------------------------------------|
- |	 License                                                                 |
- |   This file is part of HelyxOS.                                           |
- |                                                                           |
- |   HelyxOS is free software; you can redistribute it and/or modify it      |
- |   under the terms of the GNU General Public License as published by the   |
- |   Free Software Foundation; either version 2 of the License, or (at your  |
- |   option) any later version.                                              |
- |                                                                           |
- |   HelyxOS is distributed in the hope that it will be useful, but WITHOUT  |
- |   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or   |
- |   FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License   |
- |   for more details.                                                       |
- |                                                                           |
- |   You should have received a copy of the GNU General Public License       |
- |   along with HelyxOS; if not, write to the Free Software Foundation,      |
- |   Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA            |
-\*---------------------------------------------------------------------------*/
-
-
+/*******************************************************************************
+ *  |       o                                                                   |
+ *  |    o     o       | HELYX-OS: The Open Source GUI for OpenFOAM             |
+ *  |   o   O   o      | Copyright (C) 2012-2016 ENGYS                          |
+ *  |    o     o       | http://www.engys.com                                   |
+ *  |       o          |                                                        |
+ *  |---------------------------------------------------------------------------|
+ *  |   License                                                                 |
+ *  |   This file is part of HELYX-OS.                                          |
+ *  |                                                                           |
+ *  |   HELYX-OS is free software; you can redistribute it and/or modify it     |
+ *  |   under the terms of the GNU General Public License as published by the   |
+ *  |   Free Software Foundation; either version 2 of the License, or (at your  |
+ *  |   option) any later version.                                              |
+ *  |                                                                           |
+ *  |   HELYX-OS is distributed in the hope that it will be useful, but WITHOUT |
+ *  |   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or   |
+ *  |   FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License   |
+ *  |   for more details.                                                       |
+ *  |                                                                           |
+ *  |   You should have received a copy of the GNU General Public License       |
+ *  |   along with HELYX-OS; if not, write to the Free Software Foundation,     |
+ *  |   Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA            |
+ *******************************************************************************/
 package eu.engys.launcher;
 
 import java.awt.Color;
@@ -42,6 +40,8 @@ import java.net.URL;
 import java.net.URLDecoder;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import eu.engys.util.Util;
+
 public class StartUpMonitor {
 
     private static StartUpMonitor instance;
@@ -52,7 +52,7 @@ public class StartUpMonitor {
     public static void info(final String msg) {
         if (GraphicsEnvironment.isHeadless()) {
             System.out.println("+++ " + msg + " +++");
-        } else  {
+        } else {
             if (instance == null) {
                 instance = new StartUpMonitor();
                 pwnSplashScreen();
@@ -65,7 +65,7 @@ public class StartUpMonitor {
     private static void setApplicationType() {
         try {
             URL coreGuiJarURL = StartUpMonitor.class.getProtectionDomain().getCodeSource().getLocation();
-            String decodedCoreGuiJarURL = URLDecoder.decode(coreGuiJarURL.getFile(), "UTF-8");
+            String decodedCoreGuiJarURL = URLDecoder.decode(coreGuiJarURL.getFile(), Util.UTF_8);
             File libDir = new File(decodedCoreGuiJarURL).getParentFile();
             isElements = new File(libDir, "ELEMENTS.jar").exists();
             isHelyxOS = new File(libDir, "HELYX-OS.jar").exists();
@@ -90,7 +90,7 @@ public class StartUpMonitor {
         }
     }
 
-    public static void close() {
+    public static void closeSplash() {
         SplashScreen splash = getSplashScreen();
         if (splash != null) {
             splash.close();
@@ -139,9 +139,20 @@ public class StartUpMonitor {
         int splashWidth = getSplashScreen().getSize().width;
         int width = Math.min(10 * counter, splashWidth - (leftPadding * 2));
 
-        g.setColor(isHelyxOS ? Color.BLUE.darker() : Color.RED.darker());
+        Color firstColor;
+        Color secondColor;
+
+        if (isHelyxOS) {
+            firstColor = Color.BLUE.darker();
+            secondColor = Color.BLUE.brighter();
+        } else {
+            firstColor = Color.RED.darker();
+            secondColor = Color.RED.brighter();
+        }
+
+        g.setColor(firstColor);
         g.fillRect(leftPadding, topPadding, width, 2);
-        g.setColor(isHelyxOS ? Color.BLUE.brighter() : Color.RED.brighter());
+        g.setColor(secondColor);
         g.fillRect(leftPadding, topPadding, width, 1);
     }
 
@@ -220,5 +231,54 @@ public class StartUpMonitor {
     private void disableAntialias(Graphics g) {
         ((Graphics2D) g).setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_OFF);
     }
+
+    // public static void main(String[] args) {
+    // new HelyxLookAndFeel().init();
+    // Model model = new Model();
+    // model.init();
+    // JPanel panel = new JPanel(new GridLayout(4, 2));
+    // JLabel l1 = new JLabel("HELYX OS 1");
+    // JLabel l2 = new JLabel("HELYX OS 2");
+    // JLabel l3 = new JLabel("HELYX 1");
+    // JLabel l4 = new JLabel("HELYX 2");
+    // JLabel l5 = new JLabel("ELEMENTS 1");
+    // JLabel l6 = new JLabel("ELEMENTS 2");
+    // JLabel l7 = new JLabel("CASE MANAGER 1");
+    // JLabel l8 = new JLabel("CASE MANAGER 2");
+    //
+    // l1.setOpaque(true);
+    // l2.setOpaque(true);
+    // l3.setOpaque(true);
+    // l4.setOpaque(true);
+    // l5.setOpaque(true);
+    // l6.setOpaque(true);
+    // l7.setOpaque(true);
+    // l8.setOpaque(true);
+    //
+    // l1.setBackground(Color.BLUE.brighter());
+    // l2.setBackground(Color.BLUE.darker());
+    //
+    // l3.setBackground(Color.RED.brighter());
+    // l4.setBackground(Color.RED.darker());
+    //
+    // l5.setBackground(Color.GREEN.brighter());
+    // l6.setBackground(Color.GREEN.darker());
+    //
+    // l7.setBackground(Color.YELLOW.brighter());
+    // l8.setBackground(Color.YELLOW.darker());
+    //
+    // panel.add(l1);
+    // panel.add(l2);
+    // panel.add(l3);
+    // panel.add(l4);
+    // panel.add(l5);
+    // panel.add(l6);
+    // panel.add(l7);
+    // panel.add(l8);
+    //
+    // JFrame f = UiUtil.defaultTestFrame("a", panel);
+    // f.setSize(600, 300);
+    // f.setVisible(true);
+    // }
 
 }
